# serializer version: 1
# name: TestOpenJKGeneratorGenerator.test_generate[academy]
  tuple(
    list([
      '/userdata/roms/jknight/Star Wars Jedi Knight - Jedi Academy/openjk_sp.x86_64',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
      'XDG_DATA_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestOpenJKGeneratorGenerator.test_generate[academy][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate[academy][filemode]
  '-rwxr-xr-x'
# ---
# name: TestOpenJKGeneratorGenerator.test_generate[outcast]
  tuple(
    list([
      '/userdata/roms/jknight/Star Wars Jedi Knight II - Jedi Outcast/openjo_sp.x86_64',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
      'XDG_DATA_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestOpenJKGeneratorGenerator.test_generate[outcast][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate[outcast][filemode]
  '-rwxr-xr-x'
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_anistropic': '4.000000'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "4.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_brightness': '5.000000'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "5.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_colour': '16'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_colorbits "16"
  seta r_depthbits "16"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_colour': '32'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_colorbits "32"
  seta r_depthbits "24"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_colour': 'None'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_crosshair': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "0"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_crosshair': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_death': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "0"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_death': '3'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_detail': 'High'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_detail': 'Low'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_lodbias "2"
  seta r_subdivisions "20"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_detail': 'Medium'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_lodbias "1"
  seta r_subdivisions "12"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_dismember': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "0"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_dismember': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_flares': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "0"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_flares': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_glow': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_glow': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_DynamicGlow "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_guns': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "0"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_guns': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_language': 'english'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_language': 'french'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_lights': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "0"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_lights': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_shaders': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_detailtextures "0"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_shaders': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_shadows': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "0"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_shadows': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_shadows': '2'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "2"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_subtitles': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_subtitles': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "1"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_subtitles': '2'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "2"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_sway': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_sway': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "1"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_target': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "0"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_target': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "1"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture': '2'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "2"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture': '3'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "3"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture_filter': 'GL_LINEAR_MIPMAP_LINEAR'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture_filter': 'GL_LINEAR_MIPMAP_NEAREST'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture_quality': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture_quality': '16'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_texturebits "16"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_texture_quality': '32'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_texturebits "32"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_vsync': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_vsync': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_swapInterval "1"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_wall': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "0"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[academy-{'openjk_wall': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_anistropic': '4.000000'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "4.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_brightness': '5.000000'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "5.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_colour': '16'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_colorbits "16"
  seta r_depthbits "16"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_colour': '32'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_colorbits "32"
  seta r_depthbits "24"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_colour': 'None'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_crosshair': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "0"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_crosshair': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_death': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "0"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_death': '3'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_detail': 'High'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_detail': 'Low'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_lodbias "2"
  seta r_subdivisions "20"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_detail': 'Medium'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_lodbias "1"
  seta r_subdivisions "12"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_dismember': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "0"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_dismember': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_flares': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "0"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_flares': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_glow': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_glow': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_DynamicGlow "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_guns': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "0"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_guns': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_language': 'english'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_language': 'french'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_lights': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "0"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_lights': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_shaders': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_detailtextures "0"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_shaders': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_shadows': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "0"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_shadows': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_shadows': '2'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "2"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_subtitles': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_subtitles': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "1"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_subtitles': '2'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "2"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_sway': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_sway': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "1"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_target': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "0"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_target': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "1"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture': '2'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "2"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture': '3'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "3"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture_filter': 'GL_LINEAR_MIPMAP_LINEAR'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture_filter': 'GL_LINEAR_MIPMAP_NEAREST'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_NEAREST"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture_quality': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture_quality': '16'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_texturebits "16"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_texture_quality': '32'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_texturebits "32"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_vsync': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_vsync': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_swapInterval "1"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_wall': '0'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "0"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_config[outcast-{'openjk_wall': '1'}][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta d_slowmodeath "3"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_existing_binary[academy][filemode]
  '-rw-r--r--'
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_existing_binary[outcast][filemode]
  '-rw-r--r--'
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_existing_config[academy][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta d_slowmodeath "3"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_existing_config[outcast][config]
  '''
  seta r_mode "-2"
  seta r_fullscreen "1"
  seta r_centerWindow "1"
  seta r_customheight "1080"
  seta r_customwidth "1920"
  seta r_picmip "0"
  seta r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
  seta r_gamma "1.000000"
  seta d_slowmodeath "3"
  seta cg_shadows "1"
  seta r_dynamiclight "1"
  
  seta r_flares "1"
  seta cg_marks "1"
  seta r_ext_texture_filter_anisotropic "16.000000"
  seta cg_drawCrosshair "1"
  seta cg_crosshairIdentifyTarget "1"
  seta cg_gunAutoFirst "1"
  seta g_dismemberment "1"
  seta ui_disableWeaponSway "0"
  seta se_language "english"
  seta s_language "english"
  seta g_subtitles "0"
  
  '''
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_existing_old_binary[academy][filemode]
  '-rwxr-xr-x'
# ---
# name: TestOpenJKGeneratorGenerator.test_generate_existing_old_binary[outcast][filemode]
  '-rwxr-xr-x'
# ---
# name: TestOpenJKGeneratorGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'restore_state': 'KEY_F9',
      'save_state': 'KEY_F12',
    }),
    'name': 'openjk',
  })
# ---
